<resources>
    <string name="app_name">TaskMasters</string>
    <string name="title_home">Tela principal</string>
    <string name="title_tasks">Serviços</string>
    <string name="title_notifications">Notificações</string>
    <string name="title_activity_login">Entrar</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign">Cadastrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">O nome de usuário é inválido </string>
    <string name="invalid_password">A senha deve possuir no minímo 6 caracteres</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Visibilidade</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Disponível</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_settings">Configurações</string>
    <string name="exitText">Sair</string>
    <string name="account_header">Conta</string>
    <string name="title_activity_create_user">CreateUser</string>
    <string name="tab_text_1">1</string>
    <string name="tab_text_2">2</string>
    <string name="tab_text_3">3</string>
    <string name="tab_text_4">4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_task_text">Atualizar</string>
    <string name="create_task_task">Criar</string>
    <string name="welcome_text">\"Bem vindo, \"</string>
</resources>