<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="Sim"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="availability"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/account_header">
        <Preference
            app:title="Sair"
            app:key="@string/exitText"
            app:summary="Fazer logout"
            />
    </PreferenceCategory>

</PreferenceScreen>